Fix collapsing navbar (I think)

--- a/css/theme.css
+++ b/css/theme.css
@@ -22,7 +22,7 @@ div.footer {
  * Collapsing navbar from
  *   https://coderwall.com/p/wpjw4w/change-the-bootstrap-navbar-breakpoint
  */
-@media (max-width: 1600px) {
+@media (max-width: 2000px) {
     .navbar-header {
         float: none;
     }
